--- a/index.html
+++ b/index.html
@@ -721,14 +721,11 @@
       </section>
 
       <section class="grid lg:grid-cols-4 p-5">
-        <!-- <svg>
-          <use
-            xmlns:xlink="https://www.w3.org/1999/xlink"
-            xlink:href="#icon-mark"
-          ></use>
-        </svg> -->
-        <img src="" alt="" />
-
+        <img
+          src="images/logo.png"
+          alt=""
+          class="w-1/2 justify-self-center self-center bg-zinc-200"
+        />
         <div
           class="col-span-2 flex flex-col items-center justify-center md:grid md:grid-cols-3 md:grid-rows-2 gap-2"
         >
